ajout du coeur et modif animation

--- a/style.css
+++ b/style.css
@@ -490,11 +490,82 @@ a {
   color: green;
 }
 
-.card__description .heart i {
-  font-size: 30px;
+.heart {
+  position: relative;
 }
 
-/* ********* FOOTER ******** */
+.heart .coeur1 {
+  position: absolute;
+  font-size: 30px;
+  z-index: 20;
+}
+
+.heart .coeur1:active {
+  -webkit-animation: opacity-heart1 0.5s both;
+          animation: opacity-heart1 0.5s both;
+}
+
+.heart .coeur1:active + .coeur2 {
+  -webkit-animation: scale-heart2 0.5s both;
+          animation: scale-heart2 0.5s both;
+}
+
+.heart .coeur2 {
+  z-index: 0;
+  right: inherit;
+  font-size: 30px;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  background-image: linear-gradient(353deg, #9356dc 30%, #ff79da 100%);
+  background-size: 100%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-transition: -webkit-transform 0.2s;
+  transition: -webkit-transform 0.2s;
+  transition: transform 0.2s;
+  transition: transform 0.2s, -webkit-transform 0.2s;
+}
+
+@-webkit-keyframes opacity-heart1 {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes opacity-heart1 {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes scale-heart2 {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes scale-heart2 {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
 /* ********** page 2 ********* */
 /************        ********* */
 .backround-image {
@@ -519,7 +590,7 @@ main {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    width: 90%;
+    width: 75%;
     margin: auto;
     background-color: #f2f2f2;
   }
@@ -555,7 +626,7 @@ main {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    width: 90%;
+    width: 75%;
   }
 }
 
@@ -565,9 +636,8 @@ main {
   font-size: 27px;
 }
 
-.title-restaurant .fa-heart {
-  font-size: 30px;
-  padding-right: 35px;
+.title-restaurant i {
+  margin-right: 35px;
 }
 
 /* ****** Entrées ****** */
@@ -642,6 +712,7 @@ main {
 
 .menu .bloc-menu .description-menu {
   padding: 10px;
+  width: 80%;
   overflow: hidden;
   white-space: nowrap;
 }
@@ -664,13 +735,13 @@ main {
 
 .menu .bloc-menu .validation {
   height: 100%;
-  width: 80px;
+  width: 65px;
   background-color: #99e2d0;
   display: none;
   -webkit-animation: slide-left 0.5s;
           animation: slide-left 0.5s;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  -webkit-transition: 1s;
+  transition: 1s;
 }
 
 .menu .bloc-menu .fa-check-circle {
