--- a/style.scss
+++ b/style.scss
@@ -162,15 +162,54 @@ a {
       background-color: $tertiary;
       color: green;
     }
-    .heart {
-      i {
-        font-size: 30px;
-      }
-    }
   }
 }
+.heart {
+  position: relative;
 
-/* ********* FOOTER ******** */
+  .coeur1 {
+    position: absolute;
+    font-size: 30px;
+    z-index: 20;
+    &:active {
+      animation: opacity-heart1 0.5s both;
+    }
+    &:active + .coeur2 {
+      animation: scale-heart2 0.5s both;
+    }
+  }
+  .coeur2 {
+    z-index: 0;
+    right: inherit;
+
+    font-size: 30px;
+    transform: scale(0);
+    background-image: $color-gradient;
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transition: transform 0.2s;
+  }
+}
+// Animation double coeur favoris //
+
+@keyframes opacity-heart1 {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes scale-heart2 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+//************************************//
 
 /* ********** page 2 ********* */
 /************        ********* */
@@ -190,7 +229,7 @@ main {
   @media screen and (min-width: 992px) {
     display: flex;
     flex-wrap: wrap;
-    width: 90%;
+    width: 75%;
     margin: auto;
     background-color: $grey-light;
   }
@@ -206,12 +245,13 @@ main {
   margin-top: -50px;
   justify-content: space-between;
   padding-top: 5px;
+
   border-radius: 30px 30px 0 0;
   background-color: $grey-light;
   @media screen and (min-width: 992px) {
     display: flex;
     flex-wrap: wrap;
-    width: 90%;
+    width: 75%;
   }
 
   h2 {
@@ -219,9 +259,8 @@ main {
     padding-left: 20px;
     font-size: 27px;
   }
-  .fa-heart {
-    font-size: 30px;
-    padding-right: 35px;
+  i {
+    margin-right: 35px;
   }
 }
 
@@ -269,8 +308,10 @@ main {
     }
     .description-menu {
       padding: 10px;
+      width: 80%;
       overflow: hidden;
       white-space: nowrap;
+
       .principal {
         padding-bottom: 5px;
         font-size: 20px;
@@ -287,11 +328,11 @@ main {
     }
     .validation {
       height: 100%;
-      width: 80px;
+      width: 65px;
       background-color: $tertiary;
       display: none;
       animation: slide-left 0.5s;
-      transition: 0.5s;
+      transition: 1s;
     }
     .fa-check-circle {
       font-size: 25px;
