--- a/style.scss
+++ b/style.scss
@@ -3,433 +3,6 @@
 @import "./sass/Components/loader";
 @import "./sass/Layouts/header";
 @import "./sass/Base/reset";
+@import "./sass/Pages/index-page";
+@import "./sass/Pages/template-page";
 @import "./sass/Layouts/footer";
-
-/* future formulaire */
-form {
-  height: 50px;
-  background: linear-gradient(180deg, #acaaaa 0%, #ebeaea 10%);
-  @include flexbox;
-
-  i {
-    color: dimgray;
-  }
-  p {
-    margin-left: 20px;
-    color: dimgray;
-  }
-}
-/* ******** section présentation + boutton ******** */
-.présentation {
-  height: 250px;
-  text-align: center;
-  padding: 15px;
-  background-color: $grey-light;
-  @media screen and (min-width: 768px) {
-    height: 120px;
-  }
-  h2 {
-    font-weight: 800;
-    padding: 0 50px;
-  }
-  p {
-    padding: 0 10px;
-  }
-  .btn {
-    @include btn;
-    &:hover {
-      cursor: pointer;
-      opacity: 0.9;
-      transition: 0.4s;
-      box-shadow: 4px 7px 18px gray;
-    }
-  }
-}
-/* section-utilisation */
-.utilisation {
-  h2 {
-    padding-left: 20px;
-  }
-}
-
-.bloc-cases {
-  @include flexbox2;
-  height: 250px;
-  padding-bottom: 30px;
-  @media screen and (min-width: 992px) {
-    flex-direction: row;
-    height: 80px;
-  }
-  &__case {
-    @include flexbox;
-    background-color: $grey-light;
-    @include auto-box-shadow($grey-light);
-    border-radius: 15px;
-    width: 80%;
-    height: 60px;
-    position: relative;
-    @media screen and (min-width: 992px) {
-      width: 30%;
-    }
-    .round {
-      background-color: $primary;
-      position: absolute;
-      @include flexbox;
-      left: -10px;
-      font-size: 14px;
-      padding: 2px 1px 0 1px;
-      height: 20px;
-      width: 20px;
-      border-radius: 20px;
-      color: white;
-    }
-    i {
-      position: absolute;
-      left: 30px;
-      color: dimgray;
-    }
-  }
-}
-/* ********** ARTICLE CARTE *********** */
-article {
-  width: 100%;
-  background-color: $grey-light;
-  padding: 30px 0 40px 0;
-  @media screen and (min-width: 768px) {
-    width: 60%;
-    margin: auto;
-    border-radius: 25px;
-    @include auto-box-shadow(white);
-  }
-
-  h2 {
-    padding-left: 20px;
-  }
-}
-a {
-  text-decoration: none;
-  color: black;
-}
-.cards {
-  @include flexbox2;
-  @media screen and (min-width: 1200px) {
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-}
-.card {
-  background-color: white;
-  @include auto-box-shadow(white);
-  width: 90%;
-  overflow: hidden;
-  border-radius: 15px;
-  margin-bottom: 20px;
-  position: relative;
-  @media screen and (min-width: 1200px) {
-    width: 42%;
-    height: 300px;
-    margin: auto;
-    margin-bottom: 40px;
-    padding-bottom: 20px;
-  }
-
-  img {
-    width: 100%;
-    height: 220px;
-    object-fit: cover;
-    margin-top: -55px;
-    @media screen and (min-width: 1200px) {
-      height: 280px;
-    }
-  }
-  h3 {
-    margin: 0;
-  }
-  p {
-    margin: 0;
-    padding: 5px 0 10px 0;
-  }
-  &__description {
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    .stickers {
-      position: absolute;
-      border-radius: 2px;
-      top: 10px;
-      right: 10px;
-      padding: 5px 10px;
-      background-color: $tertiary;
-      color: green;
-    }
-  }
-}
-.heart {
-  position: relative;
-
-  .coeur1 {
-    position: absolute;
-    font-size: 30px;
-    z-index: 20;
-    &:active {
-      animation: opacity-heart1 0.5s both;
-    }
-    &:active + .coeur2 {
-      animation: scale-heart2 0.5s both;
-    }
-  }
-  .coeur2 {
-    z-index: 0;
-    right: inherit;
-
-    font-size: 30px;
-    transform: scale(0);
-    background-image: $color-gradient;
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    transition: transform 0.2s;
-  }
-}
-// Animation double coeur favoris //
-
-@keyframes opacity-heart1 {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-@keyframes scale-heart2 {
-  0% {
-    transform: scale(0);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-//************************************//
-
-/* ********** page 2 ********* */
-/************        ********* */
-
-.backround-image {
-  position: relative;
-}
-.backround-image img {
-  width: 100%;
-  height: 270px;
-  object-fit: cover;
-}
-main {
-  width: 100%;
-}
-#main-page2 {
-  @media screen and (min-width: 992px) {
-    display: flex;
-    flex-wrap: wrap;
-    width: 75%;
-    margin: auto;
-    background-color: $grey-light;
-  }
-}
-
-/* ******** titre restaurant + coeur ******** */
-
-.title-restaurant {
-  @include flexbox;
-  position: absolute;
-  width: 100%;
-  height: 70px;
-  margin-top: -50px;
-  justify-content: space-between;
-  padding-top: 5px;
-
-  border-radius: 30px 30px 0 0;
-  background-color: $grey-light;
-  @media screen and (min-width: 992px) {
-    display: flex;
-    flex-wrap: wrap;
-    width: 75%;
-  }
-
-  h2 {
-    font-family: "Shrikhand";
-    padding-left: 20px;
-    font-size: 27px;
-  }
-  i {
-    margin-right: 35px;
-  }
-}
-
-/* ****** Entrées ****** */
-.menu {
-  @include flexbox2;
-  height: 350px;
-  background-color: $grey-light;
-  padding-top: 20px;
-  @media screen and (min-width: 992px) {
-    width: 45%;
-    margin: auto;
-  }
-
-  h3 {
-    text-transform: uppercase;
-    align-self: start;
-    font-weight: 100;
-    font-size: 17px;
-    padding-left: 25px;
-    position: relative;
-    &::before {
-      content: "";
-      width: 45px;
-      height: 3px;
-      background-color: $tertiary;
-      position: absolute;
-      bottom: -10px;
-    }
-  }
-  .bloc-menu {
-    display: flex;
-    justify-content: space-between;
-    cursor: pointer;
-    width: 90%;
-    max-width: 500px;
-    height: 70px;
-    background-color: white;
-    overflow: hidden;
-    transition: 0.9s;
-    @include auto-box-shadow(white);
-    border-radius: 15px;
-    &:hover .validation {
-      display: block;
-    }
-    .description-menu {
-      padding: 10px;
-      width: 80%;
-      overflow: hidden;
-      white-space: nowrap;
-
-      .principal {
-        padding-bottom: 5px;
-        font-size: 20px;
-        font-weight: 800;
-      }
-      p {
-        margin: 0;
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
-    }
-    .price {
-      margin: 40px 20px;
-    }
-    .validation {
-      height: 100%;
-      width: 65px;
-      background-color: $tertiary;
-      display: none;
-      animation: slide-left 0.5s;
-      transition: 1s;
-    }
-    .fa-check-circle {
-      font-size: 25px;
-      padding: 20px;
-      color: white;
-      animation: rotate-icon 0.5s;
-    }
-  }
-}
-
-@keyframes slide-left {
-  0% {
-    transform: translateX(20%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0%);
-    opacity: 1;
-  }
-}
-
-@keyframes rotate-icon {
-  0% {
-    transform: rotate(-180deg);
-  }
-  100% {
-    transform: rotate(0deg);
-  }
-}
-/* ***** bouton commander ******* */
-
-.command-btn {
-  height: 100px;
-  padding-top: 20px;
-  padding-bottom: 40px;
-  background-color: $grey-light;
-  @include flexbox;
-  @media screen and (min-width: 992px) {
-    width: 100%;
-  }
-
-  .btn {
-    @include btn;
-    &:hover {
-      cursor: pointer;
-      opacity: 0.9;
-      transition: 0.4s;
-      box-shadow: 4px 7px 15px gray;
-    }
-  }
-}
-
-// **************spinner ********** //
-
-//**********************animation menu page 2************//
-@keyframes not-visible {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-#meal-1 {
-  animation: not-visible 1s both;
-  animation-delay: 0.1s;
-}
-#meal-2 {
-  animation: not-visible 1s both;
-  animation-delay: 0.2s;
-}
-#meal-3 {
-  animation: not-visible 1s both;
-  animation-delay: 0.3s;
-}
-#meal-4 {
-  animation: not-visible 1s both;
-  animation-delay: 0.4s;
-}
-#meal-5 {
-  animation: not-visible 1s both;
-  animation-delay: 0.5s;
-}
-#meal-6 {
-  animation: not-visible 1s both;
-  animation-delay: 0.6s;
-}
-#meal-7 {
-  animation: not-visible 1s both;
-  animation-delay: 0.7s;
-}
-#meal-8 {
-  animation: not-visible 1s both;
-  animation-delay: 0.8s;
-}
-#meal-9 {
-  animation: not-visible 1s both;
-  animation-delay: 0.9s;
-}
