--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@
   text-align: center;
   width: 100%;
   text-align: center;
-  -webkit-animation: visible 2s;
-          animation: visible 2s;
+  -webkit-animation: visible 2s linear;
+          animation: visible 2s linear;
   top: 0;
   left: 0;
   z-index: 200;
@@ -32,14 +32,14 @@
   visibility: hidden;
 }
 
-.section .loader-quart {
+.section .loader-circle {
   border-radius: 90px;
   border: 3px solid #e4e4f3;
-  -webkit-animation: spin 3s linear infinite;
-          animation: spin 3s linear infinite;
+  -webkit-animation: spin 3s linear;
+          animation: spin 3s linear;
 }
 
-.section .loader-quart:after {
+.section .loader-circle:after {
   content: "";
   position: absolute;
   top: -6px;
@@ -51,7 +51,7 @@
   border-radius: 90px;
 }
 
-.section .loader-quart::before {
+.section .loader-circle::before {
   content: "";
   position: absolute;
   top: 12px;
@@ -62,8 +62,8 @@
   border-top-color: #ff79da;
   border-bottom-color: #9cdee2;
   border-radius: 90px;
-  -webkit-animation: spin 3s linear infinite;
-          animation: spin 3s linear infinite;
+  -webkit-animation: spin 3s linear;
+          animation: spin 3s linear;
 }
 
 @-webkit-keyframes visible {
@@ -151,74 +151,6 @@ body {
 body h1 {
   font-family: "Shrikhand";
   font-weight: normal;
-}
-
-footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding-bottom: 10px;
-  background-color: #2a2a2a;
-  color: white;
-}
-
-@media screen and (min-width: 992px) {
-  footer {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-
-footer h3 {
-  padding-left: 20px;
-  margin-bottom: 0px;
-  font-family: "Shrikhand";
-  font-weight: lighter;
-}
-
-footer ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding-left: 20px;
-  list-style: none;
-}
-
-@media screen and (min-width: 992px) {
-  footer ul {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
-}
-
-footer ul li {
-  padding-bottom: 10px;
-  padding-right: 100px;
-}
-
-footer ul i {
-  padding-right: 5px;
-}
-
-footer ul a {
-  color: white;
-}
-
-footer ul .fa-rotate-45 {
-  margin-left: -7px;
-  -webkit-transform: rotate(160deg);
-  transform: rotate(160deg);
 }
 
 /* future formulaire */
@@ -494,20 +426,24 @@ a {
   position: relative;
 }
 
-.heart .coeur1 {
-  position: absolute;
-  font-size: 30px;
-  z-index: 20;
+.heart label input[type="checkbox"] {
+  display: none;
 }
 
-.heart .coeur1:active {
+.heart label input[type="checkbox"]:checked ~ .coeur1 {
   -webkit-animation: opacity-heart1 0.5s both;
           animation: opacity-heart1 0.5s both;
 }
 
-.heart .coeur1:active + .coeur2 {
+.heart label input[type="checkbox"]:checked ~ .coeur2 {
   -webkit-animation: scale-heart2 0.5s both;
           animation: scale-heart2 0.5s both;
+}
+
+.heart .coeur1 {
+  position: absolute;
+  font-size: 30px;
+  z-index: 20;
 }
 
 .heart .coeur2 {
@@ -707,6 +643,8 @@ main {
 }
 
 .menu .bloc-menu:hover .validation {
+  -webkit-animation: slide-left 0.5s both;
+          animation: slide-left 0.5s both;
   display: block;
 }
 
@@ -738,8 +676,6 @@ main {
   width: 65px;
   background-color: #99e2d0;
   display: none;
-  -webkit-animation: slide-left 0.5s;
-          animation: slide-left 0.5s;
   -webkit-transition: 1s;
   transition: 1s;
 }
@@ -847,18 +783,26 @@ main {
 @-webkit-keyframes not-visible {
   0% {
     opacity: 0;
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
   }
   100% {
     opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
 }
 
 @keyframes not-visible {
   0% {
     opacity: 0;
+    -webkit-transform: translateY(20px);
+            transform: translateY(20px);
   }
   100% {
     opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
 }
 
@@ -923,5 +867,73 @@ main {
           animation: not-visible 1s both;
   -webkit-animation-delay: 0.9s;
           animation-delay: 0.9s;
+}
+
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-bottom: 10px;
+  background-color: #2a2a2a;
+  color: white;
+}
+
+@media screen and (min-width: 992px) {
+  footer {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+footer h3 {
+  padding-left: 20px;
+  margin-bottom: 0px;
+  font-family: "Shrikhand";
+  font-weight: lighter;
+}
+
+footer ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: 20px;
+  list-style: none;
+}
+
+@media screen and (min-width: 992px) {
+  footer ul {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
+footer ul li {
+  padding-bottom: 10px;
+  padding-right: 100px;
+}
+
+footer ul i {
+  padding-right: 5px;
+}
+
+footer ul a {
+  color: white;
+}
+
+footer ul .fa-rotate-45 {
+  margin-left: -7px;
+  -webkit-transform: rotate(160deg);
+  transform: rotate(160deg);
 }
 /*# sourceMappingURL=style.css.map */
