--- a/sass/Pages/_index-page.scss
+++ b/sass/Pages/_index-page.scss
@@ -41,7 +41,11 @@ form {
 /* section-utilisation */
 .utilisation {
   h2 {
+    padding-top: 30px;
     padding-left: 20px;
+    padding-bottom: 15px;
+    max-width: 1400px;
+    margin: auto;
   }
 }
 
@@ -49,6 +53,8 @@ form {
   @include flexbox2;
   height: 250px;
   padding-bottom: 30px;
+  max-width: 1440px;
+  margin: auto;
   @media screen and (min-width: 992px) {
     flex-direction: row;
     height: 80px;
@@ -84,8 +90,10 @@ form {
   }
 }
 /* ********** ARTICLE CARTE *********** */
+
 article {
   width: 100%;
+  max-width: 1440px;
   background-color: $grey-light;
   padding: 30px 0 40px 0;
   @media screen and (min-width: 768px) {
@@ -110,7 +118,7 @@ a {
     flex-wrap: wrap;
   }
 }
-.card {
+.restaurant-fav {
   background-color: white;
   @include auto-box-shadow(white);
   width: 90%;
@@ -123,39 +131,44 @@ a {
     height: 300px;
     margin: auto;
     margin-bottom: 40px;
-    padding-bottom: 20px;
   }
-
-  img {
-    width: 100%;
-    height: 220px;
-    object-fit: cover;
-    margin-top: -55px;
-    @media screen and (min-width: 1200px) {
-      height: 280px;
+  .card {
+    img {
+      width: 100%;
+      height: 220px;
+      object-fit: cover;
+      margin-top: -55px;
+      @media screen and (min-width: 1200px) {
+        height: 280px;
+      }
+    }
+    h3 {
+      margin: 0;
+    }
+    p {
+      margin: 0;
+      padding: 5px 0 10px 0;
+    }
+    &__description {
+      padding: 10px;
+      display: flex;
+      justify-content: space-between;
+      .stickers {
+        position: absolute;
+        border-radius: 2px;
+        top: 10px;
+        right: 10px;
+        padding: 5px 10px;
+        background-color: $tertiary;
+        color: green;
+      }
     }
   }
-  h3 {
-    margin: 0;
-  }
-  p {
-    margin: 0;
-    padding: 5px 0 10px 0;
-  }
-  &__description {
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    .stickers {
-      position: absolute;
-      border-radius: 2px;
-      top: 10px;
-      right: 10px;
-      padding: 5px 10px;
-      background-color: $tertiary;
-      color: green;
-    }
-  }
+}
+.position-coeur {
+  position: absolute;
+  bottom: 35px;
+  right: 20px;
 }
 .heart {
   position: relative;
@@ -167,6 +180,14 @@ a {
   }
   label input[type="checkbox"]:checked ~ .coeur2 {
     animation: scale-heart2 0.5s both;
+  }
+  @media screen and (min-width: 1200px) {
+    label input[type="checkbox"]:hover ~ .coeur1 {
+      animation: opacity-heart1 0.5s both;
+    }
+    label input[type="checkbox"]:hover ~ .coeur2 {
+      animation: scale-heart2 0.5s both;
+    }
   }
   .coeur1 {
     position: absolute;
