--- a/sass/Pages/_template-page.scss
+++ b/sass/Pages/_template-page.scss
@@ -51,8 +51,8 @@ main {
     margin-right: 35px;
   }
 }
-
-/* ****** Entrées ****** */
+/********************************************************/
+/* ************* Entrée , plats , desserts ************ */
 #starter {
   height: 420px;
   @media screen and (min-width: 992px) {
@@ -97,10 +97,16 @@ main {
     transition: 0.9s;
     @include auto-box-shadow(white);
     border-radius: 15px;
-    &:hover .validation {
-      display: block;
-      animation: slide-left 0.7s both;
+    &:hover {
+      .validation-price {
+        margin-right: 31px;
+      }
+
+      .fa-check-circle {
+        animation: rotate-icon 0.25s 0.2s ease-in-out;
+      }
     }
+
     .description-menu {
       padding: 10px;
       width: 80%;
@@ -118,32 +124,26 @@ main {
         text-overflow: ellipsis;
       }
     }
-    .price {
-      margin: 40px 20px;
+    .validation-price {
+      display: flex;
+      transition: margin-right 0.3s ease-in-out;
+      margin-right: -33px;
+      width: 100px;
+      .price {
+        margin: 40px 20px;
+        width: 36px;
+      }
+      .validation {
+        height: 100%;
+        width: 64px;
+        background-color: $tertiary;
+      }
+      .fa-check-circle {
+        font-size: 25px;
+        padding: 20px;
+        color: white;
+      }
     }
-    .validation {
-      height: 100%;
-      width: 65px;
-      background-color: $tertiary;
-      display: none;
-    }
-    .fa-check-circle {
-      font-size: 25px;
-      padding: 20px;
-      color: white;
-      animation: rotate-icon 0.5s;
-    }
-  }
-}
-
-@keyframes slide-left {
-  0% {
-    transform: translateX(20%);
-    opacity: 0;
-  }
-  100% {
-    transform: translateX(0%);
-    opacity: 1;
   }
 }
 
@@ -155,6 +155,7 @@ main {
     transform: rotate(0deg);
   }
 }
+/**********************************/
 /* ***** bouton commander ******* */
 
 .command-btn {
@@ -178,9 +179,8 @@ main {
   }
 }
 
-// **************spinner ********** //
-
-//**********************animation menu page 2************//
+/********************************************************/
+/**********************animation menu page 2************/
 @keyframes not-visible {
   0% {
     opacity: 0;
